--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -1,13 +1,13 @@
 <div class="container-fluid">
     <app-header ></app-header>
-<div class="row w-100">
+<!-- <div class="row w-100">
   <div class="col-sm-2">
   <app-sidebar></app-sidebar>
   </div>
   <div class="col-sm-10">
     <app-product-layout></app-product-layout>
   </div>
-</div>
+</div> -->
 </div>
 
 
